NIFI-7680 Added convenience methods for creating XML DocumentBuilder instances. Added unit tests.